--- a/draft2.tex
+++ b/draft2.tex
@@ -36,7 +36,10 @@
 \section{Empirical Part}
 \subsection{Introduction} 
 
-In our empirical project, we started on the task of applying the empirical strategy outlined in the paper by Ichino et al. (2014), titled "Hidden consequences of a first-born boy for mothers." This involved using our assigned dataset from Asia, specifically dated before the year 2000. Meeting these criteria, we found data for Jordan 2004 on IPUMS. The Ichino paper had revealed a significant causal effect of the first child sex on the mothers' working hours, employment status, and fertility.
+In our empirical project, we started on the task of applying the empirical strategy outlined in the paper by Ichino et al. (2014), 
+titled "Hidden consequences of a first-born boy for mothers." 
+This involved using our assigned dataset from Asia, specifically dated before the year 2000. Meeting these criteria, we found data for Jordan 2004 on IPUMS. 
+The Ichino paper had revealed a significant causal effect of the first child sex on the mothers' working hours, employment status, and fertility.
 
 Jordan is a country in the heart of the Middle East and is home to approximately 11.1 million people as of the year 2023. The population reflects a diverse range of ethnic groups, with Jordanians constituting 70\% Syrian 13\% and Palestinian, and Egyptian communities each make up significant portions 7\%. In terms of religion, Jordan is predominantly Muslim, with 97.1\% Sunni Muslims of the population, while the remaining 2.9\% are orthodox Christians etc..
 
