--- a/QM_bib.bib
+++ b/QM_bib.bib
@@ -1,12 +1,43 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Moritz Trinkner at 2024-02-14 13:27:12 +0100 
+%% Created for Moritz Trinkner at 2024-02-15 04:58:35 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{NYT06,
+	author = {Greenhouse, Steven and Barbaro, Michael},
+	date = {2006-05-03},
+	date-added = {2024-02-15 04:39:54 +0100},
+	date-modified = {2024-02-15 04:57:42 +0100},
+	journal = {New York Times},
+	lastchecked = {2024-02-14},
+	month = {May},
+	note = {(Accessed 14 Feb 2024)},
+	title = {An Ugly Side of Free Trade: Sweatshops in Jordan,},
+	url = {https://www.nytimes.com/2006/05/03/business/worldbusiness/03clothing.html},
+	urldate = {2024-02-14},
+	year = {2006}}
+
+@article{Stewart12Wage,
+	abstract = {This paper investigates possible spillover effects of the UK minimum wage. The halt in the growth in inequality in the lower half of the wage distribution (as measured by the 50:10 percentile ratio) since the mid-1990s, in contrast to the continued inequality growth in the upper half of the distribution, suggests the possibility of a minimum wage effect and spillover effects on wages above the minimum. This paper analyses individual wage changes, using both a difference-in-differences estimator and a specification involving comparisons across minimum wage upratings, and concludes that there have not been minimum wage spillovers. Since the UK minimum wage has always been below the 10 th percentile, this lack of spillovers implies that minimum wage changes have not had an effect on the 50:10 percentile ratio measure of inequality in the lower half of the wage distribution.},
+	author = {Mark B. Stewart},
+	date-added = {2024-02-15 03:58:56 +0100},
+	date-modified = {2024-02-15 03:59:19 +0100},
+	issn = {00307653, 14643812},
+	journal = {Oxford Economic Papers},
+	number = {4},
+	pages = {616--634},
+	publisher = {Oxford University Press},
+	title = {Wage inequality, minimum wage effects, and spillovers},
+	url = {http://www.jstor.org/stable/41683136},
+	urldate = {2024-02-14},
+	volume = {64},
+	year = {2012},
+	bdsk-url-1 = {http://www.jstor.org/stable/41683136}}
 
 @article{blau1996wage,
 	author = {Blau, Francine D and Kahn, Lawrence M},
