--- a/draft2.tex
+++ b/draft2.tex
@@ -4,7 +4,6 @@
 \usepackage{graphicx}
 \usepackage{adjustbox}
 \usepackage{caption}
-
 \usepackage{newtx}
 \usepackage[a4paper, left=3cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage[noabbrev]{cleveref}
@@ -18,7 +17,7 @@
     
 \begin{titlepage}
 
-    \author{Moritz Trinkner}
+    \author{Moritz Trinkner \thanks {sad }}
     \title{Seminar:\\ Quantitative Methoden}
     \date{February 2024}
 \end{titlepage}
@@ -41,7 +40,9 @@ titled "Hidden consequences of a first-born boy for mothers."
 This involved using our assigned dataset from Asia, specifically dated before the year 2000. Meeting these criteria, we found data for Jordan 2004 on IPUMS. 
 The Ichino paper had revealed a significant causal effect of the first child sex on the mothers' working hours, employment status, and fertility.
 
-Jordan is a country in the heart of the Middle East and is home to approximately 11.1 million people as of the year 2023. The population reflects a diverse range of ethnic groups, with Jordanians constituting 70\% Syrian 13\% and Palestinian, and Egyptian communities each make up significant portions 7\%. In terms of religion, Jordan is predominantly Muslim, with 97.1\% Sunni Muslims of the population, while the remaining 2.9\% are orthodox Christians etc..
+Jordan is a country in the heart of the Middle East and is home to approximately 11.1 million people as of the year 2023. 
+The population reflects a diverse range of ethnic groups, with Jordanians constituting 70\% Syrian 13\% and Palestinian, and Egyptian communities each make up significant portions 7\%. 
+In terms of religion, Jordan is predominantly Muslim, with 97.1\% Sunni Muslims of the population, while the remaining 2.9\% are orthodox Christians etc..
 
 
 \subsection{Data}
@@ -89,16 +90,17 @@ Furthermore, we implemented an age restriction to filter out illogical values, s
 Table 1 shows the descriptive statistics for all the variables we used in our analysis. We have 40,295 mothers in our sample.
 Noticeable values in the table are that only 13.5\% of mothers are working and accordingly the average hours worked per mother is only 5.
 The maximum working hours might seem high,
-but since only 1\% of employed mothers work more than 70 hours and there are reports of sweatshops in Jordan with up to 100h worked per week (Greenhouse and Barbaro, 2006) we deemed it plausible.
+but since only 1\% of employed mothers work more than 70 hours and there are reports of sweatshops in Jordan with up to 100h worked per week \citep{NYT06} we deemed it plausible.
 It is worth to note here, that the working hours per week, only looking at working mothers, is 40.2.
 This suggests that part time work is almost non-existent in Jordan, in our sample less than 4\% of working mothers work less that 30 hours per week.
 This lack of part time work can partially be of an explanation of the low workforce participation of women. 
+
 Additionally, 97.6\% of mothers are married and 81.1\% have more than 1 child.
 All of this points to the fact that Jordan is a highly conservative and religious country with strict gender roles.
 In our sample 51.7\% of first-born kids are boys, being close to the natural sex ratio. Therefore the key identification assumption that gender of first born boy is random holds.
     
     
-\begin{table}[ht]
+\begin{table}[hbp]
     \caption{T-tests of mothers' characteristics on sex of the first-born child}
     \begin{tabularx}{\textwidth}{lllll}
         \hline
@@ -127,7 +129,7 @@ The T-Tests in Table 2 are all insignificant, except for the More than 1 child v
 We will discuss the possible reasons for that later.
 This suggests that average characteristics are same for mothers despite gender of their first child, and gender of first-born child is exogenous.
 
-\begin{table}[ht]% not h om its own
+\begin{table}[tbp]% not h om its own
     \caption{First child gender, fertility and marital status of the mother}
 
     
@@ -137,7 +139,7 @@ This suggests that average characteristics are same for mothers despite gender o
     \hline & \\[-1.0em]
     Hours worked per week & & Probability of working &  \\
     \hline & \\[-1.0em]
-        sFirst-born boy          & 0.086           & First-born boy           & 0.003           \\
+        First-born boy          & 0.086           & First-born boy           & 0.003           \\
         St. err.                & 0.141           & St. err.                 & 0.003           \\
         \\[-1.0em]
         Baseline Girl:          & 5.378           & Baseline Girl:           & 0.133           \\
@@ -147,19 +149,21 @@ This suggests that average characteristics are same for mothers despite gender o
     \hline
     \end{tabularx}
 
-    *p < 0.1 ; ** p < 0.05 ; *** p < 0.01 Controls: quadratic in age. Left panel the dependent variable is the number of hours worked per week in reference week. On right panel the dependent variable is a dummy equal to 1 if the person is employed and 0 otherwise. Data from IPUMS, 2020. 
+    *p < 0.1 ; ** p < 0.05 ; *** p < 0.01 Controls: quadratic in age. Left panel the dependent variable is the number of hours worked per week in reference week. 
+    On right panel the dependent variable is a dummy equal to 1 if the person is employed and 0 otherwise. Data from IPUMS, 2020. 
     \label{tab:work}
     \end{table}
 
 Table 3 recreates Table 2 from Ichino et. al. (2014). It is important to note that baseline girl was created by taking the constant and adding mean of age and age squared multiplied by the respective estimators. 
-(Original values for the corresponding standard errors are -17.109 and -0.433) In the first part is a regression on hours worked per week, using first-born boy as the main explanatory variable, and controlling for a quadratic function of age. 
+(Original values for the corresponding standard errors are -17.109 and -0.433) 
+In the first part is a regression on hours worked per week, using first-born boy as the main explanatory variable, and controlling for a quadratic function of age. 
 The second part uses an employed dummy as the dependent variable, so that the result can be interpreted as the probability of a mother working. 
 The explanatory variables are the same as above. Equally, the effect of a first-born boy is insignificant.
 The original paper finds, coefficients of first-born boy significant and negative. In contrast, here they are small and positive, which would suggest that having first born boy increases both probability and time working. 
 But as noted, estimated effect of having a first-born boy instead of a girl in Jordan on working hours as well as employment status is insignificant. We attribute these differences to cultural specificity of Jordan.
     
 
-\begin{table}[ht]% not h om its own
+\begin{table}[bp]% not h om its own
     \caption{First child gender, fertility and marital status of the mother}
 
     
@@ -196,11 +200,13 @@ The results of the descriptive statistics for Jordan show significant difference
 As already mentioned, the percentage of employed mothers (employment status) in Jordan is approximately 13.4\%, and the average weekly worked hours (hours worked) are around 5.38. 
 This places the proportion of employed mothers in Jordan significantly lower than that of the countries analyzed in the original paper, (U.S., UK, Italy, and Sweden). 
 The likelihood of a mother being employed in the original paper's countries ranged from approximately 50\% to 65\% between the years 1960 and 2011. 
-Karin A. Wenger writes in the Neue Zürcher Zeitung that hardly any other country without war has as few working women as Jordan, estimating the number of non-working women at 85\% (cf. Wenger K. A., 12.08.2021), which aligns with our result of employed mothers (13.4\% employed).
+Karin A. Wenger writes in the Neue Zürcher Zeitung that hardly any other country without war has as few working women as Jordan, estimating the number of non-working women at 85\% (cf. Wenger K. A., 12.08.2021), 
+which aligns with our result of employed mothers (13.4\% employed).
 This suggests that not only mothers but women in general are scarcely employed in Jordan. 
 Furthermore, the rate of married mothers in Jordan, based on the data, is significantly higher than in the countries examined in the original paper, standing at approximately 97.55\% compared to about 67\%-86\%. 
 Like the original paper, we also examined the relationship between firstborn boys and fertility in Jordan, with results partially differing from those in the original paper.
-The authors of the original study introduced the concept of the "desire for a son” effect, claiming that mothers tend to have fewer children if their firstborn is a boy, attributed to strengthened marriages, increased maternal security, and higher fertility potentially leading to reduced labor force participation. 
+The authors of the original study introduced the concept of the "desire for a son” effect, claiming that mothers tend to have fewer children if their firstborn is a boy, 
+attributed to strengthened marriages, increased maternal security, and higher fertility potentially leading to reduced labor force participation. 
 The authors emphasized the "desire for a son" effect, highlighting the need to explore maternal marital status. 
 In contrast to the original paper, our study in Jordan found that the gender of the first child had no visible influence on the marital status of mothers. 
 Almost every mother in Jordan is already married, indicating a prevailing trend possibly rooted in religious beliefs. 
@@ -227,7 +233,8 @@ The replication regression shows that female participation on labor market is ve
 Notably, we find that women work less in Jordan.
 More importantly, the coefficient of sex of first child is small and insignificant which suggests that gender of first-born child has no effect of mothers' labor supply.
 Due to cultural characteristics of Jordan, it is more likely that other factors like culture and institutions play role in determining female labor.
-For instance, while there have been efforts to improve gender equality in Jordan, the legal and policy framework may still have areas that negatively impact women's participation in the workforce. The enforcement and effectiveness of such policies also play a role (Gauri et al., 2019).
+For instance, while there have been efforts to improve gender equality in Jordan, the legal and policy framework may still have areas that negatively impact women's participation in the workforce. 
+The enforcement and effectiveness of such policies also play a role (Gauri et al., 2019).
 Jordan is a predominantly Muslim country, and interpretations of Islamic teachings may influence societal attitudes towards women's employment as traditionally women are employed in household work and not outside (Shakhatreh, 1990). 
 
 \section{Main Summary of Paper}
@@ -235,9 +242,12 @@ Jordan is a predominantly Muslim country, and interpretations of Islamic teachin
 % • What is the main contribution?
 
 
-The following Section all summarizes the paper “Did the minimum wage reduce the gender wage gap in Germany?” by \citet{CALIENDO22}. It addresses the question if the minimum wage can have an effect on the gender wage gap. The reason why this effect might appear is that women are in most countries and regions disproportionally represented among low paid workers. \citep{kahn2015wage}
+The following section all summarizes the paper “Did the minimum wage reduce the gender wage gap in Germany?” by \citet{CALIENDO22}. It addresses the question if the minimum wage can have an effect on the gender wage gap. 
+The reason why this effect might appear is that women are in most countries and regions disproportionally represented among low paid workers. \citep{kahn2015wage}
 This means that an increase in the minimum wage would affect women's average wages more than mens, leading to a decrease in the gender wage gap.
-The minimum wage is a national wage floor, that is binding for almost all employees. Germany is a special research case, since it was one of the last OECD countries to introduce a Minimum wage. When it was introduced in 2015 at 8.50€ it was one of the highest in the EU in terms of purchasing power parity. It affected 10\% of the workforce, and 2/3 of those affected low income workers were women.  This strong increase makes Germany a great natural experiment to observe effects of the minimum wage, in this case the effect of the gender wage gap. 
+The minimum wage is a national wage floor, that is binding for almost all employees. Germany is a special research case, since it was one of the last OECD countries to introduce a Minimum wage. 
+When it was introduced in 2015 at 8.50€ it was one of the highest in the EU in terms of purchasing power parity. It affected 10\% of the workforce, and 2/3 of those affected low income workers were women.  
+This strong increase makes Germany a great natural experiment to observe effects of the minimum wage, in this case the effect of the gender wage gap. 
 %Short preview of results in introduction
 %Detailed OECD Data from 2014 First Decile comparison to average
 % not a panel study
@@ -259,10 +269,11 @@ It is held every four years, so the data used is from 2014 and 2018. Because of 
 % Discussion of control variables
 
 % Maybe explain ex
-The Method used in the paper is a difference-in-difference approach with fixed effects. Since there are no legislative differences for the federal wage in difference regions in Germany, the authors use regional differences in Germany to assign Germany to the control or treatment group.
+The Method used in the paper is a difference-in-difference approach with fixed effects. 
+Since there are no legislative differences for the federal wage in difference regions in Germany, the authors use regional differences in Germany to assign Germany to the control or treatment group.
 %Why fraction of in relation to women and not the whole workforce
 %Not dependent on gender wage gap neither on fraction of men working under the minimum wage
-%"We generate the gender wage gap at the regional level as the diﬀerence between men’s and women’s wages divided by men’s wages."
+%"We generate the gender wage gap at the regional level as the difference between men’s and women’s wages divided by men’s wages."
 This is followed after \citet{Card1992} who did the same in an analysis of the minimum wage in the United States. 
 They  use labor market regions to split the country in 257 different regions. 
 The fraction of women that worked below the minimum wage in 2014 in relation to all employed women is used to see how 
@@ -285,11 +296,19 @@ The interaction term, estimated with $\delta$, is the main result of the paper, 
 \subsection{Main Result}
 % • What is the main result? And what is the implication of this finding?
 % Summarize and synthesize the results, provide relevant background information
-\begin{table}[btp] %Main Results
-    \caption{Fixed effects regressions of wage gaps at 10th percentile, 25th percentile and mean (in labour market regions).}
-    \centering
-    \resizebox{\textwidth}{!}{%
-    \begin{tabular}{lllllll}
+
+
+
+% analysis of 10th 25th percentile and mean
+
+The Results displayed in \Cref{tab:main} are calculated at different points in the distribution. Panel A examines the effects at the 10th percentile of the wage distribution, Panel B at the 25th percentile, and Panel C looks at the overall gender wage gap at the mean. The first column is without any controls, which get added gradually in the following columns.  
+
+\begin{table}[htbp] %Main Results
+    \caption{Regressions of wage gaps at 10th percentile, 25th percentile and mean.}
+    %\centering
+    %\resizebox{\textwidth}{!}{%
+    \begin{adjustbox}{width=\textwidth}
+    \begin{tabular}{l@{\hskip 10ex}llllll}
     \hline & \\[-1.0em]
                               & (1)       & (2)       & (3)       & (4)       & (5)       & (6)       \\ 
     \hline & \\[-1.0em]
@@ -331,16 +350,13 @@ The interaction term, estimated with $\delta$, is the main result of the paper, 
     Groups                    & 257       & 257       & 257       & 257       & 257       & 257       \\
     \hline & \\[-1.0em]
     \end{tabular}
-    
-    }
-    Source: SES 2010, 2014 and 2018, own calculations. Note: We only include eligible employees that are not employed in the public service. The subsample is identiﬁed via the variable GG2010, which is provided by the federal statistical oﬃce and which adapts the 2014 and 2018 data to the structure of the 2010 wave (FDZ, 2019).
+    \end{adjustbox}
+    %}
+
+    Note: which adapts the 2014 and 2018 data to the structure of the 2010 wave (FDZ, 2019).
     \label{tab:main}
+    
     \end{table}
-
-
-% analysis of 10th 25th percentile and mean
-
-The Results displayed in \Cref{tab:main} are calculated at different points in the distribution. Panel A examines the effects at the 10th percentile of the wage distribution, Panel B at the 25th percentile, and Panel C looks at the overall gender wage gap at the mean. The first column is without any controls, which get added gradually in the following columns.  
 
 Since the dependent variable is the unadjusted gender wage gap in percent, the coefficients can be interpreted as  the percentage point change of the gender wage gap.
 
@@ -352,11 +368,12 @@ This is still in relation to the 2018 dummy, but here, it becomes insignificant.
 % First panel: Strong reduction of gender wage gap
 % explain percentage point and actual percentage decrease
 % 2018 dummy becomes insignificant
-This is still in relation to the 2018 dummy, but here, it becomes insignificant. This suggests that for the lower incomes at the 10th percentile, the wage gap only decreased in the treatment regions, while it stagnated for the control regions.
+This is still in relation to the 2018 dummy, but here, it becomes insignificant. This suggests that for the lower incomes at the 10th percentile, 
+the wage gap only decreased in the treatment regions, while it stagnated for the control regions.
 
 % 25th percentile
 % significant, but smaller results.
-For the 
+For the 25th percentile
 % (c6) -18\% compared to the level in 2014 (which was at 18.3%)
 % Explain why result at the 25th percentile parts over 30 percent of affected women, compare figure 4
 % Additional increases for low payed employees expected (source?)
@@ -366,9 +383,16 @@ For the
 % (c6) -2.3 ,  relative reduction of 11% 2014 level which was 20.4%)
 %  dummy negative -> general reduction, more in treatment group
 % Explain why result at the 25th percentile parts over 30 percent of affected women, compare figure 4
-Given that the minimum wage directly only affected a small fraction of women working (14.65\% earned less than 8.84€ in 2014), one might ask the question why there is an effect at the 25th percentile at all. There are two relevant explanations for that. 
-
-Spillover effect for incomes up to 12.50€ \citep{Dustman21Reallocation} 
+Given that the minimum wage directly only affected a small fraction of women working (14.65\% earned less than 8.84€ in 2014), one might ask the question why there is an effect at the 25th percentile at all.
+%Rewrite that sentence 
+There are two relevant explanations for that.
+First thing to note is, that while the cutoff for the enrollment in the treatment group is only 17.5\%,
+some of the regions (and almost all of the regions in eastern Germany)
+had more than 25\% of women affected. This leads to the minimum wage directly affecting their wages even at and above the 25th percentile of the wage distribution, and thus leading to a reduction in the gender wage gap there.
+Another reason is the spillover effect, meaning that an increase in the minimum wage not only raises wages below the wage floor, but also wages slightly above it.
+In a paper analyzing these spillover effects in the UK, \citet{Stewart12Wage} cites multiple reasons for this, like the continuity of existing wage differentials or higher reservation wages for certain jobs and sees the minimum wage as a general increase in the cost of low-skilled labor.
+For Germany, \citet{Dustman21Reallocation} find that spillover effects due to the minimum wage introduction effect initial wages up to 12.50€, which is just slightly below the median for women in 2014 of 12.54€ \citep[see][Table 1]{CALIENDO22}. 
+%Spillover effect for incomes up to 12.50€ \citep{Dustman21Reallocation} 
 \subsection{Robustness, Validity and other fun stuff}
 
 
