--- a/draft2.tex
+++ b/draft2.tex
@@ -243,7 +243,7 @@ Jordan is a predominantly Muslim country, and interpretations of Islamic teachin
 
 
 The following section all summarizes the paper “Did the minimum wage reduce the gender wage gap in Germany?” by \citet{CALIENDO22}. It addresses the question if the minimum wage can have an effect on the gender wage gap. 
-The reason why this effect might appear is that women are in most countries and regions disproportionally represented among low paid workers. \citep{kahn2015wage}
+The reason why this effect might appear is that women are in most countries and regions disproportionally represented among low paid workers \citep{kahn2015wage}.
 This means that an increase in the minimum wage would affect women's average wages more than mens, leading to a decrease in the gender wage gap.
 The minimum wage is a national wage floor, that is binding for almost all employees. Germany is a special research case, since it was one of the last OECD countries to introduce a Minimum wage. 
 When it was introduced in 2015 at 8.50€ it was one of the highest in the EU in terms of purchasing power parity. It affected 10\% of the workforce, and 2/3 of those affected low income workers were women.  
@@ -373,7 +373,7 @@ the wage gap only decreased in the treatment regions, while it stagnated for the
 
 % 25th percentile
 % significant, but smaller results.
-For the 25th percentile
+For the 25th percentile the coefficients are slightly lower, but still highly significant.
 % (c6) -18\% compared to the level in 2014 (which was at 18.3%)
 % Explain why result at the 25th percentile parts over 30 percent of affected women, compare figure 4
 % Additional increases for low payed employees expected (source?)
@@ -383,7 +383,7 @@ For the 25th percentile
 % (c6) -2.3 ,  relative reduction of 11% 2014 level which was 20.4%)
 %  dummy negative -> general reduction, more in treatment group
 % Explain why result at the 25th percentile parts over 30 percent of affected women, compare figure 4
-Given that the minimum wage directly only affected a small fraction of women working (14.65\% earned less than 8.84€ in 2014), one might ask the question why there is an effect at the 25th percentile at all.
+Given that the minimum wage directly only affected a small fraction working women (14.65\% earned less than 8.84€ in 2014), one might ask the question why there is an effect at the 25th percentile at all.
 %Rewrite that sentence 
 There are two relevant explanations for that.
 First thing to note is, that while the cutoff for the enrollment in the treatment group is only 17.5\%,
