--- a/draft2.tex
+++ b/draft2.tex
@@ -349,11 +349,16 @@ The Results displayed in \Cref{tab:main} are calculated at different points in t
     Observations              & 514       & 514       & 514       & 514       & 514       & 514       \\
     Groups                    & 257       & 257       & 257       & 257       & 257       & 257       \\
     \hline & \\[-1.0em]
+    \multicolumn{7}{l}{
+        \textsuperscript{***}$p < 0.01$, 
+        \textsuperscript{**}$p < 0.05$, 
+        \textsuperscript{*}$p < 0.1$     
+        Note: which adapts the 2014 and 2018 data to the st}
     \end{tabular}
     \end{adjustbox}
     %}
 
-    Note: which adapts the 2014 and 2018 data to the structure of the 2010 wave (FDZ, 2019).
+    
     \label{tab:main}
     
     \end{table}
@@ -373,15 +378,13 @@ the wage gap only decreased in the treatment regions, while it stagnated for the
 
 % 25th percentile
 % significant, but smaller results.
-For the 25th percentile the coefficients are slightly lower, but still highly significant.
+For the 25th percentile in Panel B the coefficients are slightly lower, but still highly significant.
+With all controls included (column 6) the treatment effect is still -3.3 percentage points.
+This equates to a relative decrease of the gender wage gap of 18\%, given the initial level of 18.3\%.
 % (c6) -18\% compared to the level in 2014 (which was at 18.3%)
 % Explain why result at the 25th percentile parts over 30 percent of affected women, compare figure 4
 % Additional increases for low payed employees expected (source?)
 
-% Mean
-
-% (c6) -2.3 ,  relative reduction of 11% 2014 level which was 20.4%)
-%  dummy negative -> general reduction, more in treatment group
 % Explain why result at the 25th percentile parts over 30 percent of affected women, compare figure 4
 Given that the minimum wage directly only affected a small fraction working women (14.65\% earned less than 8.84€ in 2014), one might ask the question why there is an effect at the 25th percentile at all.
 %Rewrite that sentence 
@@ -393,6 +396,13 @@ Another reason is the spillover effect, meaning that an increase in the minimum 
 In a paper analyzing these spillover effects in the UK, \citet{Stewart12Wage} cites multiple reasons for this, like the continuity of existing wage differentials or higher reservation wages for certain jobs and sees the minimum wage as a general increase in the cost of low-skilled labor.
 For Germany, \citet{Dustman21Reallocation} find that spillover effects due to the minimum wage introduction effect initial wages up to 12.50€, which is just slightly below the median for women in 2014 of 12.54€ \citep[see][Table 1]{CALIENDO22}. 
 %Spillover effect for incomes up to 12.50€ \citep{Dustman21Reallocation} 
+% Mean
+At the mean (Panel C) the effects are reduced not only in magnitude, but also the significance reduces to the 5\% level. 
+Here the dummy for 2018 is significantly negative as well, so overall the gender wage gap shrunk between 2014 and 2018.
+But even here, high-bite regions experience an additional decrease of 2.3 Percentage points, which compared to the initial wage gap of 20.4\% in these regions is a 11\% reduction.
+% (c6) -2.3 ,  relative reduction of 11% 2014 level which was 20.4%)
+Note that this is the overall gender wage gap using the average wages of men and women, in contrast to the two upper panels which compare points on the wage distribution.
+%  dummy negative -> general reduction, more in treatment group
 \subsection{Robustness, Validity and other fun stuff}
 
 
