--- a/QM_bib.bib
+++ b/QM_bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Moritz Trinkner at 2024-02-15 04:58:35 +0100 
+%% Created for Moritz Trinkner at 2024-02-15 12:26:17 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -20,7 +20,8 @@
 	title = {An Ugly Side of Free Trade: Sweatshops in Jordan,},
 	url = {https://www.nytimes.com/2006/05/03/business/worldbusiness/03clothing.html},
 	urldate = {2024-02-14},
-	year = {2006}}
+	year = {2006},
+	bdsk-url-1 = {https://www.nytimes.com/2006/05/03/business/worldbusiness/03clothing.html}}
 
 @article{Stewart12Wage,
 	abstract = {This paper investigates possible spillover effects of the UK minimum wage. The halt in the growth in inequality in the lower half of the wage distribution (as measured by the 50:10 percentile ratio) since the mid-1990s, in contrast to the continued inequality growth in the upper half of the distribution, suggests the possibility of a minimum wage effect and spillover effects on wages above the minimum. This paper analyses individual wage changes, using both a difference-in-differences estimator and a specification involving comparisons across minimum wage upratings, and concludes that there have not been minimum wage spillovers. Since the UK minimum wage has always been below the 10 th percentile, this lack of spillovers implies that minimum wage changes have not had an effect on the 50:10 percentile ratio measure of inequality in the lower half of the wage distribution.},
@@ -145,11 +146,11 @@
 	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12219},
 	bdsk-url-2 = {https://doi.org/10.1111/roiw.12219}}
 
-@article{MAJCHROWSKA2018174,
+@article{MAJCHROWSKA2018poland,
 	abstract = {This paper aims at assessing the effect of significant increase in the minimum wage observed in Poland in 2008--2009 on gender wage gap. To check the potentially differentiated effects throughout wage distribution authors analyse the impact of minimum wage increase separately for different age and educational groups. Innovative methodological approach which combines the non-parametric approach of DiNardo et al. (1996) with Oaxaca (1973) -- Blinder (1973) decomposition is proposed. The results indicate that the significant decrease in gender wage gaps observed among younger workers in Poland in 2006--2010 could be attributed to an increase in the minimum wage level. The effects of minimum wage increases were negligible for the middle-aged workers. Changes in gender wage gaps among educational groups were much smaller. The results confirm that minimum wage policy could be an appropriate tool for decreasing the existing differentials in pay between men and women, however potential disemployment effects should be considered.},
 	author = {Aleksandra Majchrowska and Pawe{\l} Strawi{\'n}ski},
 	date-added = {2024-02-01 19:07:56 +0100},
-	date-modified = {2024-02-01 19:07:56 +0100},
+	date-modified = {2024-02-15 12:22:41 +0100},
 	doi = {https://doi.org/10.1016/j.econmod.2017.10.021},
 	issn = {0264-9993},
 	journal = {Economic Modelling},
@@ -162,13 +163,13 @@
 	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0264999317306661},
 	bdsk-url-2 = {https://doi.org/10.1016/j.econmod.2017.10.021}}
 
-@techreport{Broadway2017Probing,
+@techreport{Broadway2017AUS,
 	abstract = {When wage setting is more regulated, the gender wage gap tends to decrease. We examine whether this holds for a complex system of occupation- and industry-specific minimum wages, which cover both low-pay and high-pay segments of the labour market. The system has the potential to close the gender wage gap by ensuring equal minimum pay for equal jobs, but it also has the potential to widen it by discriminating against jobs more commonly held by women. We carefully describe wage levels as well as returns to experience and their association with individual gender as well as the male employment share in the individual's field (industry or occupation) of work. We find that the gender wage gap among employees receiving a minimum wage is less than half the magnitude of the gap among other employees. Despite this, there is nonetheless evidence that, within the minimum-wage system, there is a wage penalty for employment in jobs more commonly held by women, although only for employees without university degrees. Our results suggest that, for university-educated women, the regulated setting of minimum wages helps to close the gender wage gap and counteracts the undervaluation of work typically undertaken by women. However, for less-educated women, who comprise approximately 82% of female minimum-wage employees, minimum wages could do more to close the gender wage gap if they were neutral with respect to the gender composition of jobs.},
 	address = {Bonn},
 	author = {Barbara Broadway and Roger Wilkins},
 	copyright = {http://www.econstor.eu/dspace/Nutzungsbedingungen},
 	date-added = {2024-02-01 19:07:56 +0100},
-	date-modified = {2024-02-01 19:07:56 +0100},
+	date-modified = {2024-02-15 12:26:12 +0100},
 	keywords = {J31; J16; 330; gender wage gap; minimum wages},
 	language = {eng},
 	number = {11191},
