--- a/draft2.tex
+++ b/draft2.tex
@@ -439,7 +439,27 @@ The value at the 10th percentile stays significant the 10\% level for all regres
 % Germany as an extreme case
 %Other countries 
 
+
 \section{Literature Content} %Aim for 1.5 pages 
+
+The effects of the Australian minimum wage system on the gender pay gap is studied by \citet{Broadway2017AUS}.
+Australia is a interesting country to compare to, since they do not only universal minimum wage, but additionally a complex system of occupation and industry based minimum wages, so called awards. Because of this system 24\% of the population are payed a minimum wage. 
+Since \Citet{CALIENDO22} showed that the minimum wage has a significant effect on the gender wage gap at the lower end of the distribution, the Australian system seems like a great way to use the effect to also reduce the wage gap higher up in the wage distribution. 
+Overall, occupations in the award systems have a lower gender wage gap than occupations not affected by it.
+But while the award system is binding for more women than men, meaning that overall more women profit from it, it also has negatives. \citeauthor{Broadway2017AUS} show in their paper that the award system assigns lower minimum wages to typical female low education jobs compared to typical male low education jobs.
+For those jobs, the award system might even increase the gender wage gap.
+Overall, while this system seems like a option to compress the wage distribution and reduce the wage gap even at higher income levels, it can also lead to additional wage differentials between men and women.
+
+Another interesting paper about the minimum wage effect on the gender wage gap is written by \citet{Robinson05UK}, studying the effect the national minimum wage in the UK has on the gender pay gap. The paper creates a theoretical model and discusses the prerequisites for the effect of the minimum wage on the gender pay gap. 
+%rewrite sentence ->
+Not only do Women have to be disproportionally affected by the minimum wage but the average wage difference between the wage payed before and the minimum wage has to be also larger
+% <- rewrite sentence
+\Citeauthor{Robinson05UK} uses a similar approach, looking at regions where the fraction of women earning under the minimum wage compared to men working under the minimum wage is large. The result of this difference-in-differences estimation is (although her coefficients are mainly insignificant) that the minimum wage led to a decrease relative decrease of the gender pay gap in the treatment regions.
+Despite this similar result to Germany there is a big difference here.
+Because men were overall even lower paid than women, the introduction of the minimum wage increased the gender pay gap. This shows that despite finding that the minimum wage reduces the gender wage gap in regions where women are affected relative to the other regions, the overall effect might differ.
+
+In the main regression by \citet{CALIENDO22} the dummy was negative and the gender wage gap decreased overall. Nevertheless this shows the importance to emphasize that the main result of the regression alone, the interaction term being negative, merely shows a relative decrease in the gender pay gap of regions where women were highly affected by it compared to the other parts of Germany.
+To show why this is the case in the UK, \Citeauthor{Robinson05UK} analyzes not only the fraction of women affected, but also how far the initial wages were below the minimum wage for men and women.
 
 
 \section{Connection to empirical project} %maybe only half a page, additional empirical discussion if time
